style.css
:root {
  --pink-10: #e7cdce;
  --pink-20: #eaa8ac;
  --pink-50: #e1848c;
  --pink-70: #d05d65;
  --pink-100: #c00645;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Sriracha', cursive;
}

html {
    background-image: linear-gradient(var(--pink-70), var(--pink-50));
}

body {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  height: 100%;
  min-height: 100vh;
  padding-bottom: 2rem;
}

h1 {
  font-size: 5rem;
  color: var(--pink-10);
  word-break: keep-all;
}

form {
    text-align: center;
    width: 80%;
}

input, select, textarea {
    background-color: var(--pink-10);
    border-radius: 1.5rem;
    color: var(--pink-100);
    cursor: pointer;
    font-size: 1.5rem;
    text-align: center;
    padding: 0.25rem 0.5rem;
    margin: 0.5rem 0.1rem;
}

textarea {
    border: 2px solid var(--pink-70);
    cursor: text;
    font-size: 2rem;
    resize: none;
    padding: 0.25rem 2rem;
    overflow: hidden;
    width: 30%;
}

select {
    font-size: 1.25rem;
    margin-bottom: 2rem;
    width: 15%;
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    background-image: url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="%23c00645" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"%3E%3Cpolyline points="6 9 12 15 18 9"%3E%3C/polyline%3E%3C/svg%3E');
    background-repeat: no-repeat;
    background-position: right 5px center;
    background-size: 1.5rem;
}

input[type=submit] {
    width: 15%;
    -webkit-transition: width 0.2s ease-in-out;
    transition: width 0.2s ease-in-out;
}

input[name=open] {
    background-color: var(--pink-100);
    border: 2px solid var(--pink-100);
    color: var(--pink-10);
}

input[name=open]:hover {
    background-color: var(--pink-70);
    border: 2px solid var(--pink-10);
    color: var(--pink-10);
}

input[name=copy] {
    background-color: var(--pink-20);
    border: 2px solid var(--pink-100);
    color: var(--pink-100);
}

input[name=copy]:hover {
    background-color: var(--pink-70);
    border: 2px solid var(--pink-10);
    color: var(--pink-10);
}

#cover {
    margin-bottom: 1rem;
    pointer-events: none;
}

#home {
    color: var(--pink-70);
    font-size: 1.5rem;
    position: fixed;
    right: 0;
    bottom: 0;
    margin-right: 1rem;
    margin-bottom: 1rem;
    text-decoration: none;
    -webkit-text-stroke: 0.5px var(--pink-10);
}

#home:hover {
    color: var(--pink-100);
}

@media screen and (max-width: 768px) {
    h1 {
        font-size: 3rem;
    }

    textarea {
        width: 100%;
    }

    input {
        margin: 0.25rem 0;
    }

    input[type=submit] {
        width: 45%;
    }

    select {
        margin-bottom: 1rem;
        width: 30%;
    }
}

